multiple interfaction between server and client

--- a/project/www/test.html
+++ b/project/www/test.html
@@ -5,8 +5,12 @@
 </head>
 
 <body>
-    Hello
-    <b>Express</b>
+    <h3>Test Form</h3>
+    <form action="/calculate">
+        Number
+        <input type="text" name="number" />
+        <input type="submit" value="Send" />
+    </form>
 </body>
 
 </html>
