chnage on server side

--- a/project/www/test.html
+++ b/project/www/test.html
@@ -6,7 +6,7 @@
 
 <body>
     <h3>Test Form</h3>
-    <form action="/calculate">
+    <form method="post" action="/calculate">
         Number
         <input type="text" name="number" />
         <input type="submit" value="Send" />
