server/client/sql example

--- a/project/www/test.html
+++ b/project/www/test.html
@@ -6,9 +6,9 @@
 
 <body>
     <h3>Test Form</h3>
-    <form method="post" action="/calculate">
-        Number
-        <input type="text" name="number" />
+    <form method="post" action="/save">
+        Name
+        <input type="text" name="name" />
         <input type="submit" value="Send" />
     </form>
 </body>
